BookingControllerTest Item ControllerTest fixed2.0